--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -561,8 +561,15 @@ Often, interleaved cell coordinates near the boundaries of the domain do not pro
 
 \subsection{Cuthill-McKee} 
 
+The set of orderings considered up to this point have focused on spatially sorting cells during the stencil generation phase. The Cuthill-McKee family of algorithms change that focus to reorder nodes \emph{after} stencils are generated. 
 
-Another option for reordering nodes is to focus on ordering the differentiation matrix directly to reduce bandwidth. A commonly used algorithm for this is called \emph{Reverse Cuthill-McKee} (RCM) reordering. RCM takes as input a square, symmetric adjacency graph and returns a vector of indices indicating the new order for each row of the matrix. 
+Once stencils are generated, a directed adjacency graph exists that describes how each node is connected to its neighbors. 
+
+The purpose of Cuthill-McKee algorithms is specifically to reduce the bandwidth of sparse matrices. Reducing the bandwidth can offer two benefits: a) better conditioning of the matrix for reduced fill-in during decompositions, and b) better cache reuse in memory. %TODO: find ref to backup this statement 
+
+%TODO: move adjacency graph description to previous chapter so I can ref it from here and the METIS description. 
+
+directly to reduce bandwidth. A commonly used algorithm for this is called \emph{Reverse Cuthill-McKee} (RCM) reordering. RCM takes as input a square, symmetric adjacency graph and returns a vector of indices indicating the new order for each row of the matrix. 
 
 The RCM algorithm first finds the row with fewest non-zeros corresponding to the node in the graph with the lowest degree of connectivity.  traverses the adjacency graph 
  
@@ -687,6 +694,11 @@ Due to the limited significance of stencil generation under RBF-FD, the overhead
 
 It is worth noting that recent work by Connor and Kumar \cite{Connor2009} has developed operators capable of producing $Z$-orderings based on floating point coordinates. 
 
+For quasi-regular distributions and small to medium sized grids the $k$-D Tree performs well enough in comparison to the fixed-grid method. However, the difference in 
+%TODO: what value? 
+
+There is an ideal $h_n$. %TODO: what is is as a function of N?
+
 
 
 \subsection{Future Work}
@@ -703,23 +715,14 @@ Open item from to this section include:
 \cite{Saad2003} mentions the impact of ordering on conditioning.
 
 
-\section{Conclusions on Stencil Generation}
-
-For quasi-regular distributions and small to medium sized grids the $k$-D Tree performs well enough in comparison to the fixed-grid method. However, the difference in 
-%TODO: what value? 
-
-There is an ideal $h_n$. %TODO: what is is as a function of N?
-
-
 TODO: 
 \begin{itemize} 
 \item Node orderings based on integer dilation
 \begin{itemize} 
-\item Dilation and interleave process (include description of groups by dimension)
-\item Give formulas for interleaving
 \item RCM algorithm high level (?)
+\item Define bandwidth metric
 \item bandwidth implications on memory access (lower bandwidth is usually better)
-\item table showing the impact of orderings on bandwidths
+\item table showing the impact of orderings on bandwidths (already shown in figure, for N=4096). 
 \end{itemize} 
 \end{itemize}
 
