--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -46,11 +46,11 @@
 
 \mainmatter
 
-%\include{introduction}
-%\include{related_work}
-%\include{rbffd_method}
+\include{introduction}
+\include{related_work}
+\include{rbffd_method}
 \include{ordering_and_preconditioning}
-%\include{distributed_solver}
+\include{distributed_solver}
 
 %\include{ViennaCL.tex}
 %\include{future_of_gpus.tex}
