--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -740,12 +740,9 @@ On top of memory savings, this concept of composing DMs based on lower order ope
 
 The sparsity exhibited by the DM in Figure~\ref{fig:example_DM_rows} is typical for RBF-FD. Consider that a problem size of $N=10,000$ nodes and stencil size $n=31$ is only $0.31\%$ full (i.e., $99.79\%$ of the matrix elements are zeros), and the percentage continues to decrease as $N$ increases. Contrary to initial appearance, RBF-FD DMs like Figure~\ref{fig:example_DM_rows} are not symmetric. This is true for two reasons: a) a stencil is generated based on $n-1$ nearest neighbors to a center with no guarantee that any of the stencil nodes will include the center in their stencils; and  b) even if the stencil connectivity were symmetric, each row of the DM contains a distinct set of weights that are a function of independent stencils. The only way to guarantee a symmetric system is to ensure all stencils are shaped the same, with the same number of nodes and node distribution relative to the center, plus all stencil nodes must have a bijective relationship (i.e., if $A$ is connected to $B$, then $B$ connects to $A$). 
 
-
-In Chapters~\ref{chap:stencils} and \ref{chap:distributed_rbffd} the concept of an \emph{adjacency matrix} is required. Adjacency matrices connectivity of stencils produces
-
-
 Best practices dictate that the DMs be stored in some type of compressed sparse storage that retains only non-zeros and their corresponding indices in memory. Note that with DMs stored as sparse representations, the matrix-vector multiply operation is distinguished as a \emph{sparse matrix-vector multiply} (SpMV). SpMVs avoid unnecessary operations by only multiplying the nonzero elements of the matrix matched to corresponding values in the vector. The actual algorithm for SpMV depends on the choice of sparse storage. Chapter~\ref{chap:gpu_rbffd} demonstrates the pivotal role that sparse formats play in the performance of SpMV, and thus RBF-FD. 
 
+\subsection{Adjacency Matrix}
 
 %TODO: finish adjacency matrix is equivalent to DM. 
 %TODO: Unsymmetric
@@ -763,11 +760,14 @@ Best practices dictate that the DMs be stored in some type of compressed sparse 
 \caption{Undirected (Symmetric)}
 \label{fig:undirected_graph}
 \end{subfigure}
-\caption{Simple adjacency graphs and their corresponding matrices. Edges connecting nodes of RBF-FD stencils produce a directed adjacency matrix, (a).}
+\caption{Simple adjacency graphs and their corresponding matrices. Edges connecting nodes of RBF-FD stencils produce a directed adjacency matrix.}
 \label{fig:adjacency_matrix}
 \end{center}
 \end{figure}
 
+In Chapters~\ref{chap:stencils} and \ref{chap:distributed_rbffd} the concept of an \emph{adjacency matrix} is required. Adjacency matrices have the same structure as a DM, except all nonzeros elements are replaced with a 1. The nonzero elements indicate connectivity between nodes (i.e., stencil connections). For example, in Figure~\ref{fig:directed_graph} the nodes $A$, $B$, $C$, and D are connected via directional arrows indicating that B depends on $A$, $C$, and $D$, while $C$ depends on $B$, and $D$ depends only on $A$. $A$ has no dependencies. The graph on the left is directed and the associated adjacency matrix is unsymmetric. Figure~\ref{fig:undirected_graph} demonstrates the case where edges connecting nodes are undirected, corresponding to a symmetric matrix. 
+
+Some operations like matrix decomposition and reordering are easier to apply to symmetric adjacency matrices. It is often possible to apply those operations to RBF-FD by symmetrizing the matrix. If $A$ is the unsymmetric RBF-FD adjacency matrix, then $A + A^T$ produces a symmetric adjacency matrix.
 
 
 \section{Weight Operators}
